--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "8.19.4",
     "node": "16.20.1"
   },
+  "engineStrict": true,
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
